syntax = "proto3";

package PostAvatar;

option go_package = "./proto;PostAvatar";

service PostAvatar {
	rpc PostAvatar(PostAvatarRequest) returns (PostAvatarResponse) {}
}

message PostAvatarRequest {
	string session_id = 1;
	// binary photo atream
	bytes Avatar=2;
	int64 file_size=3;
	string file_ext=4;
}

message PostAvatarResponse {
	string errno = 1;
	string err_msg=2;
	// partial url for avatar
	string avatar_url=3;
}

